--- a/Assignment 3 - CSS/Part 2/style.css
+++ b/Assignment 3 - CSS/Part 2/style.css
@@ -2,26 +2,26 @@ html {
   font-family: sans-serif;
 }
 
-div{
+div {
     width: 200px;
     margin: auto;
     line-height: 8;
 
+    font-size: 1rem;
+    text-align: center;
+    color: red;
+    text-shadow: 1px 1px 1px black;
 
-    backroundcolor:1px solid #8b0000;
-    backroundimage: linear-gradient(
+    border-radius: 10px;
+    border: 1px solid #FF0000;
+    background-color: 1px solid #FF0000;
+    background-image: linear-gradient(
         to top left,
         rgba(0,0,0,0.2)
         rgba(0,0,0,0.2)30%
         rgba(0,0,0,0)
-    )
-    border: 1px solid #8b0000;
-    border-radius: 10px;
-    texts-hadows
-    color: maroon;
-    text-allign: center;
-    font-size: 1rem;
-
-
+    );
+    box-shadow: inset  4px  4px  2px rgba(179, 9, 9, 0.6)
+        inset -3px -3px -3px rgba(0,0,0,0.6), 3px, 3px, 3px
 
 }
